# FastApi

./: .gitignore  main.py  pyproject.toml
app/: models.py
app/services/: auth.py  encryprion.py
database/: base.py
migrations/versions/: 4pv1rm7c9fn3_0001_init.py
